static/css/styles.css
body {
    ;
}
.project-name {
    background: #222;
    font-size: 20px;
    padding: 10px 20px !important;
    margin: 0;
    border-radius: 0;
}
.project-name a {
    text-decoration: none;
    color: #ccc;
}
.main-menu {
    background: #555;
    color: #fff;
    border-radius: 0;
}
.files-list {
    padding-top: 0;
}
.center {
    text-align: center;
}
.user-page-content {
    margin: 0px 10px 50px;
}
.nav > li a,
.nav > li > span {
    position: relative;
    display: block;
    padding: 15px;
    line-height: 20px;
    cursor: pointer;
    text-decoration: none;
}
.nav > li a:hover,
.nav > li span:hover {
    background: #888 !important;
}
.submenu {
    display: none;
    position: absolute;
    padding: 0;
    margin: 0;
    min-width: 100%;
    background: #555;
    z-index: 2;
}
.submenu li {
    list-style-type: none;
    position: relative;
}
.nav > li > a {
    color: #fff !important;
}
.nav > li .submenu a,
.nav > li .submenu span {
    padding: 8px 15px;
    color: #fff;
    display: block;
    cursor: pointer;
}
.news-item {
    margin: 0 0 15px 0;
}
.news-short {
    margin: 0;
}
.news-date {
    font-size: 10px;
}
.submenu .submenu {
    background: #666;
    top: 0;
    left: 0;
    margin-left: 100%;
}

